--- a/src/app/home/data-base/ux/ux.component.css
+++ b/src/app/home/data-base/ux/ux.component.css
@@ -1,4 +1,6 @@
-
+.containerr{
+  width: 1500px;
+}
 .metric {
     margin: 10px 0;
   }
@@ -15,7 +17,7 @@
     color: red;
   }
   .my-text {
-    margin-left: -415px;
+    margin-left: -475px;
     color: rgb(80, 79, 79);
     margin-top: 10px;
     font-weight: bold; 
@@ -288,4 +290,65 @@
     margin-left: 15px;
     margin-top: 10px;
   }
+  .toggle-btn {
+    all: unset;
+    display: inline-flex;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+    font-family: Arial, sans-serif;
+    margin-left: 1320px;
+    margin-top: -30px;
+    height: 40px;
+    width: 220px;
+  }
+  
+  /* Fundal pentru selecție */
+  .toggle-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: #ffe7c5;
+    border-radius: 20px;
+    transition: transform 0.3s ease;
+    z-index: 0;
+  }
+  
+  /* Opțiunile de buton */
+  .toggle-option {
+    flex: 1;
+    padding: 10px 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    position: relative;
+    z-index: 1;
+    transition: color 0.3s ease;
+    color: #666;
+    margin-left: -5px;
+  }
+  
+  /* Opțiunea selectată */
+  .toggle-option.selected {
+    color: #333;
+  }
+  
+  /* Fundalul se mută în funcție de opțiunea selectată */
+  .toggle-btn[data-selected="desktop"]::before {
+    transform: translateX(0); /* Fundalul rămâne în stânga pentru Desktop */
+  }
+  
+  .toggle-btn[data-selected="phone"]::before {
+    transform: translateX(100%); /* Fundalul se mută la dreapta pentru Phone */
+  }
+  
+  
+
+  
   
