finishing the database page

--- a/src/app/home/data-base/data-base.component.html
+++ b/src/app/home/data-base/data-base.component.html
@@ -129,7 +129,7 @@
       <span class="badge bg-success">76-100</span>
     </div> <br> <br><br>
     <p class="text-center">
-      Viteza paginii dvs. este de {{ seoScoreD }}% din optim.
+      Viteza paginii dvs. este de {{ getSeoScore() }}% din optim.
     </p>
   </div>
   <div class="seo-image-container text-center my-3 card"><div class="text-center"><h4 class="text-center"> Previzualizare site</h4> <br>
