--- a/src/app/home/keyword-overview/keyword-overview.component.css
+++ b/src/app/home/keyword-overview/keyword-overview.component.css
@@ -1,24 +1,345 @@
 .seo-image-wrapper {
-    display: flex;
-    align-items: center; /* Aliniere pe verticală */
-    justify-content: center; /* Aliniere pe orizontală */
-    width: 60px;
-    height: 60px;
-    padding: 1rem;
-    background-color: #f7f9fc;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center; /* Aliniere pe verticală */
+  justify-content: center; /* Aliniere pe orizontală */
+  width: 60px;
+  height: 60px;
+  padding: 1rem;
+  background-color: #f7f9fc;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.seo-previeww {
+  max-width: 30px;
+  max-height: 30px;
+  border-radius: 8px;
+}
+.seo-text-content {
+  margin-right: auto; /* Pentru a menține alinierea corectă */
+}
+.site-name {
+  margin: 0;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f9fafc;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 20px; /* Spațiere între secțiuni */
+}
+
+.cards-container {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  flex-wrap: wrap;
+  padding: 0 50px;
+  overflow: visible;
+  
+}
+
+.card {
+  display: flex;
+  position: relative;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: calc(25% - 15px); /* Cardurile vor ocupa 1/3 din lățimea containerului pe ecrane mari, minus gap-ul */
+  height: 70px;
+  padding: 16px;
+  align-items: center;
+  box-sizing: border-box;
+  justify-content: flex-start;
+}
+
+.card-left {
+  width: 6px;
+  background-color: #287bff; /* Banda albastră pe partea stângă */
+  border-radius: 4px 0 0 4px; /* Colțuri rotunjite */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.card-content {
+display: flex;
+flex-direction: column;
+align-items: flex-start; /* Menține alinierea textului */
+justify-content: center; /* Asigură centrare verticală */
+gap: 4px; /* Spațiu constant între elemente */
+margin: 0 16px; /* Margini constante pentru aliniere */
+width: calc(100% - 20px); /* Dimensiune relativă */
+}
+
+.card-title {
+  font-size: 14px;
+  color: #555;
+  margin: 0;
+  font-weight: bold;
+  white-space: nowrap;
+  width: 150px; /* Lățimea fixă pentru titlu */
+  text-overflow: ellipsis;
+  margin-top: -4%
+  
+}
+
+.card-value {
+  font-size: 24px;
+  color: #287bff;
+  margin: 0;
+  font-weight: bold;
+  width: 150px; /* Lățimea fixă pentru valoare */
+  
+}
+
+.card-info-container .image {
+  width: 24px;
+  height: 24px;
+}
+
+.card-info-container:hover .text-overlay {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+  display: flex;
+}
+
+/* Responsivitate */
+@media (max-width: 1024px) {
+  .card {
+      width: calc(50% - 20px); /* Cardurile vor ocupa 50% din lățimea containerului */
   }
-  .seo-previeww {
-    max-width: 30px;
-    max-height: 30px;
-    border-radius: 8px;
+  .box {
+    flex: 1 1 calc(50% - 20px); /* 2 coloane pe ecrane medii */
   }
-  .seo-text-content {
-    margin-right: auto; /* Pentru a menține alinierea corectă */
+}
+
+@media (max-width: 768px) {
+  .cards-container {
+      margin-left: 0;
+      justify-content: left; /* Centerizează cardurile pe ecrane mici */
   }
-  .site-name {
-    margin: 0;
-    font-size: 1.8rem;
+
+  .card {
+      width: 100%; /* Cardurile vor ocupa întreaga lățime a containerului */
+  }
+
+  .card-info-container {
+      width: 100%;
+      display: block;
+      margin-top: 5px;
+  }
+
+  .text-overlay {
+      font-size: 12px;
+      padding: 5px;
+  }
+  .box {
+    flex: 1 1 100%; /* 1 coloană pe ecrane mici */
+  }
+}
+
+
+.card-info-container .text-overlay {
+  position: absolute; /* Poziționare relativă la containerul părinte */
+  top: 0%; /* Aliniere verticală */
+  left: 0%; /* Aliniere laterală față de imagine */
+  transform: translate(-85%, 30%); /* Corecție pentru centrare perfectă */
+  background: rgba(10, 31, 223, 0.7); /* Fundal semitransparent */
+  color: white;
+  padding: 5px 10px; /* Spațiu interior */
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  word-wrap: break-word;
+  max-width: 260px;
+  opacity: 0; /* Ascunde textul inițial */
+  pointer-events: none; /* Previne interacțiunile când este ascuns */
+  transition: opacity 0.3s; /* Lățimea maximă a overlay-ului */
+  z-index: 99999;
+}
+.card-info-container.v2 .text-overlay {
+  transform: translate(-85%, 15%) !important;
+}
+.card-info-container.v3 .text-overlay {
+  transform: translate(-85%, 47%) !important;
+}
+.card-info-container.v4 .text-overlay {
+  transform: translate(-85%, 67%) !important;
+}
+.card-info-container.v5 .text-overlay {
+  transform: translate(-50%, 50%) !important;
+}
+.card-info-container.v6 .text-overlay {
+  transform: translate(-50%, 31%) !important;
+}
+.card-info-container.v7 .text-overlay {
+  transform: translate(-50%, 15%) !important;
+}
+.card-info-container.v8 .text-overlay {
+  transform: translate(-45%, 26%) !important;
+}
+.card-info-container.v9 .text-overlay {
+  transform: translate(-50%, 13%) !important;
+}
+
+.text-overlay {
+  position: fixed; /* Poziționare globală pe fereastră */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(10, 31, 223, 0.7);
+  color: white;
+  padding: 10px;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  width: 260px;
+  text-align: center;
+  word-wrap: break-word;
+  pointer-events: none;
+  font-size: 12px;
+  font-weight: bold;
+  z-index: 9999;
+}
+
+.card-info-container {
+  position: absolute; /* Se va suprapune peste carduri */
+  top: 35%; /* Ajustează această valoare după nevoie pentru poziționarea verticală */
+  left: 90%; /* Ajustează pentru a alinia pe orizontală */
+  z-index: 1000; /* Asigură-te că este deasupra altor elemente */
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.card-info-container.v1 {
+  position: relative;
+}
+.text-blue{
+  font-size: 20px;
+  color: #287bff ;
+  font-weight: bold;
+  margin-left: 50px;
+}
+.text-blue.v1 {
+  order: -1; /* Poziționează înaintea celorlalte elemente */
+  width: 50%; /* Se extinde pe întreaga lățime */
+  margin-bottom: 1px; /* Adaugă spațiu între text și container */
+  margin-left: 1%;
+
+}
+.text-blue.v2
+{
+ margin-left: 50px;
+}
+.text-blue.v3{
+  display: inline-flex; /* Forțează poziționarea pe aceeași linie */
+  align-items: center; /* Aliniere verticală */
+  gap: 10px; 
+}
+.container-parent {
+  display: flex;
+flex-wrap: wrap; /* Permite trecerea pe rânduri noi */
+gap: 20px; /* Spațiu între elemente */
+justify-content: space-between;
+padding: 0 50px;
+position: relative;
+}
+.item {
+  display: flex;
+  flex-direction: column; /* Textul apare deasupra dreptunghiului */
+  flex: 1 1 48%; /* Ocupă aproape 50% din lățime */
+  min-width: 200px; /* Asigură că elementele nu devin prea mici */
+  box-sizing: border-box;
+  gap: 10px;
+}
+
+.container-cuvinte, .container-distribut {
+  background-color: #fff;
+  height: 300px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+
+/* Media query pentru ecrane mici */
+@media (max-width: 1024px) {
+  .item {
+    flex: 1 1 100%; /* Ocupă întreaga lățime pe ecrane mici */
+  }
+}
+
+.container-backlink {
+  background-color: #fff;
+  height: auto; /* Înălțimea totală */
+  margin: 5px auto; /* Centrare pe orizontală */
+  width: calc(100% - 100px); /* Dimensiune flexibilă cu margini egale pe ambele părți */
+  display: flex; /* Activează Flexbox */
+  justify-content: space-between; /* Spațiere uniformă între elemente */
+  position: relative;
+  flex-wrap: wrap;
+  padding: 0 25px; /* Spațiu interior uniform */
+  box-sizing: border-box;
+}
+
+.box {
+  display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    flex: 1 1 calc(25% - 16px); /* Lățime minimă */
+    min-width: 200px;
+    max-width: 300px; /* Lățime maximă */
+    gap: 10px; /* Spațiu între elementele din box */
+    height: 100%;
+    gap: 5px;
+    justify-content: space-between;
+    border-left: 1px solid #ccc;
+}
+.title-container {
+  display: flex; /* Aranjare pe orizontală pentru titlu și icon */
+  align-items: flex-start; /* Poziționează elementele sus */
+  gap: 10px;  /* Adaugă spațiu între titlu și imagine */
+  margin-top: 5px;
+}
+.box:nth-child(1) {
+  border-left: none; /* Elimină marginea pentru primul box */
+}
+.box h4,
+  .box .h4{
+    margin-bottom: 20px;
+    margin-top: 5px;
+    margin-left: 10px;
+  }
+  .box p {
+    margin: 0; /* Elimină marginile implicite */
+    color: #555;
+    font-size: 14px;
+    margin-top: 0px; 
+    margin-left: 10px;
+  }
+  
+  .box .title {
+    font-size: 16px;
     font-weight: bold;
+    align-self: flex-start;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    
   }
+  
+.container-TV {
+  background-color: #fff;
+  width: calc(100% - 100px); /* Containerul ocupă 95% din lățimea ferestrei */
+  height: 220px; /* Înălțimea poate rămâne fixă */
+  margin: 5px auto; /* Centrare automată pe orizontală */
+}
